--- a/SceneGraph/SceneGraph.vcxproj
+++ b/SceneGraph/SceneGraph.vcxproj
@@ -136,6 +136,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Component.h" />
+    <ClInclude Include="Hash.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="Scene.h" />
   </ItemGroup>
