--- a/SceneGraph/SceneGraph.vcxproj.filters
+++ b/SceneGraph/SceneGraph.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Hash.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Callback.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Scene.cpp">
