--- a/SceneGraph.Test/SceneGraph.Test.vcxproj
+++ b/SceneGraph.Test/SceneGraph.Test.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="nodetest.cpp" />
     <ClCompile Include="scenetest.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
