--- a/SceneGraph.Test/SceneGraph.Test.vcxproj.filters
+++ b/SceneGraph.Test/SceneGraph.Test.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="scenetest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="nodetest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
