New component to attach to scene update events

--- a/SceneGraph/SceneGraph.vcxproj.filters
+++ b/SceneGraph/SceneGraph.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Callback.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SceneEventComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Scene.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Component.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneEventComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
