--- a/SceneGraph/SceneGraph.vcxproj
+++ b/SceneGraph/SceneGraph.vcxproj
@@ -140,11 +140,13 @@
     <ClInclude Include="Hash.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="SceneEventComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SceneEventComponent.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
