--- a/SceneGraph/SceneGraph.vcxproj
+++ b/SceneGraph/SceneGraph.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="Hash.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="PhysicsScene.h" />
+    <ClInclude Include="RigidBodyComponent.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneEventComponent.h" />
   </ItemGroup>
@@ -158,6 +159,7 @@
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="PhysicsScene.cpp" />
+    <ClCompile Include="RigidBodyComponent.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneEventComponent.cpp" />
   </ItemGroup>
