--- a/SceneGraph/SceneGraph.vcxproj.filters
+++ b/SceneGraph/SceneGraph.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="PhysicsScene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RigidBodyComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Component.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="PhysicsScene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RigidBodyComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
