Rigid Bodies properly updating node positions now;
Removing node from component constructor - use Component::setNode now (Node::createComponent will do this automatically)

--- a/SceneGraph.Test/SceneGraph.Test.vcxproj.filters
+++ b/SceneGraph.Test/SceneGraph.Test.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="nodetest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="physicstest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
