--- a/SceneGraph.Test/SceneGraph.Test.vcxproj
+++ b/SceneGraph.Test/SceneGraph.Test.vcxproj
@@ -167,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="nodetest.cpp" />
+    <ClCompile Include="physicstest.cpp" />
     <ClCompile Include="scenetest.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
