--- a/SceneGraph/SceneGraph.vcxproj
+++ b/SceneGraph/SceneGraph.vcxproj
@@ -76,7 +76,8 @@
     <IncludePath>$(SolutionDir)..\xbeat\Third Party\bullet3\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)..\xbeat\Third Party\bullet3\src;$(IncludePath)</IncludePath>
+    <IncludePath>D:\dev\bullet3-2.85.1\src;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\dev\bullet3-2.85.1\bin;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(SolutionDir)..\xbeat\Third Party\bullet3\src;$(IncludePath)</IncludePath>
@@ -103,6 +104,7 @@
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile />
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -167,20 +169,6 @@
     <ClCompile Include="Base\Scene.cpp" />
     <ClCompile Include="Components\SceneEventComponent.cpp" />
     <ClCompile Include="Components\ConstraintComponent.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\xbeat\Third Party\bullet3\build3\vs2010\BulletCollision.vcxproj">
-      <Project>{c917a137-b746-ea46-902a-6f85935fc861}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\xbeat\Third Party\bullet3\build3\vs2010\BulletDynamics.vcxproj">
-      <Project>{aad7e714-87c5-3b49-8d38-56b2d6c10af8}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\xbeat\Third Party\bullet3\build3\vs2010\BulletSoftBody.vcxproj">
-      <Project>{d0e0dac5-8b9a-d443-9315-89ef1f4b2c9b}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\xbeat\Third Party\bullet3\build3\vs2010\LinearMath.vcxproj">
-      <Project>{69f30f08-c581-7343-8a4d-ad0854ae08bb}</Project>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
