Use boost_test for unit test
Better portability; old unit test framework worked only on visual studio

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ compiler:
     - gcc
 
 before_install:
-    - sudo apt-get install -y libbullet-dev
+    - sudo apt-get update -qq
+    - sudo apt-get install -y libbullet-dev libboost-test-dev
 
 script:
     - mkdir build
     - cd build
     - cmake ..
     - make
+    - ctest -V
