--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,12 @@ compiler:
     - gcc
 
 before_install:
+    - git clone https://github.com/bulletphysics/bullet3.git
+    - cd bullet3/build3 && ./premake4_linux gmake
+    - cd gmake
+    - make && sudo make install
     - sudo apt-get update -qq
-    - sudo apt-get install -y libbullet-dev libboost-test-dev
+    - sudo apt-get install libboost-test-dev
 
 script:
     - mkdir build
