--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,15 @@ before_install:
 
 install:
     - git clone https://github.com/bulletphysics/bullet3.git
-    - cd bullet3/build3
-    - ./premake4_linux gmake
-    - cd gmake
-    - make && sudo make install
+    - mkdir bullet-build
+    - cd bullet-build
+    - cmake ../bullet3 -G "Unix Makefiles" -DUSE_GRAPHICAL_BENCHMARK=OFF -DBUILD_CPU_DEMOS=OFF -DUSE_GLUT=OFF -DBUILD_BULLET3=OFF -DBUILD_BULLET2_DEMOS=OFF -DBUILD_EXTRAS=OFF -DBUILD_UNIT_TESTS=OFF
+    - make -j4
+    - sudo make install
 
 script:
     - mkdir build
     - cd build
     - cmake ..
-    - make
+    - make -j4
     - ctest -V
