--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ compiler:
     - clang
     - gcc
 
-before_install:
-    - sudo apt-get update -qq
-    - sudo apt-get install libboost-test-dev
-
 install:
+    - wget https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0.tar.bz2/download -O boost.tar.bz2
+    - tar -xjf boost.tar.bz2
+    - cd boost_1_63_0
+    - ./bootstrap.sh
+    - sudo ./b2 install --with-test -j4
+    - cd ..
     - git clone https://github.com/bulletphysics/bullet3.git
     - mkdir bullet-build
     - cd bullet-build
