Add support for setting the physiscs scene FPS
Also, fixes the physics scene test

--- a/SceneGraph.Test/CMakeLists.txt
+++ b/SceneGraph.Test/CMakeLists.txt
@@ -8,10 +8,10 @@ target_include_directories(scenegraph-test-node PUBLIC ../SceneGraph)
 target_link_libraries(scenegraph-test-node LINK_PUBLIC ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} scenegraph)
 add_test(NAME scenegraph-test-node COMMAND scenegraph-test-node -l all)
 
-#add_executable(scenegraph-test-physicsscene physicstest.cpp)
-#target_include_directories(scenegraph-test-physicsscene PUBLIC ../SceneGraph)
-#target_link_libraries(scenegraph-test-physicsscene LINK_PUBLIC ${BULLET_COLLISION_LIBRARY} ${BULLET_DYNAMICS_LIBRARY} ${BULLET_MATH_LIBRARY} ${BULLET_SOFTBODY_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} scenegraph)
-#add_test(NAME scenegraph-test-physicsscene COMMAND scenegraph-test-physicsscene -l all)
+add_executable(scenegraph-test-physicsscene physicstest.cpp)
+target_include_directories(scenegraph-test-physicsscene PUBLIC ../SceneGraph)
+target_link_libraries(scenegraph-test-physicsscene LINK_PUBLIC ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} scenegraph)
+add_test(NAME scenegraph-test-physicsscene COMMAND scenegraph-test-physicsscene -l all)
 
 add_executable(scenegraph-test-scene scenetest.cpp)
 target_include_directories(scenegraph-test-scene PUBLIC ../SceneGraph)
