--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ dist: trusty
 cache: ccache
 compiler: gcc
 
+before_install:
+    - cmake --version
+
 install:
     - wget https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0.tar.bz2/download -O boost.tar.bz2
     - tar -xjf boost.tar.bz2
