--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,7 @@ ClientBin/
 *.pfx
 *.publishsettings
 node_modules/
+.vs
 
 # RIA/Silverlight projects
 Generated_Code/
@@ -234,3 +235,5 @@ $RECYCLE.BIN/
 *.lnk
 /SceneGraph.VC.VC.opendb
 /SceneGraph.VC.db
+/CMakeSettings.json
+/CppProperties.json
