--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ endif()
 # SDL 2 isn't required. If found, build SDL module
 find_package(SDL2)
 find_package(OpenGL)
+find_package(GLM)
 
 if (NOT Boost_FOUND)
     message(AUTHOR_WARNING "boost test >= 1.59 not found, disabling unit testing!")
@@ -30,7 +31,7 @@ if (Boost_FOUND AND EnableTest)
     add_subdirectory(SceneGraph.Test)
 endif()
 
-if (SDL2_FOUND)
+if (SDL2_FOUND AND GLM_FOUND)
     add_subdirectory(glad)
     add_subdirectory(SceneGraph.SDL)
     add_subdirectory(SceneGraph.SDL.Example)
