--- a/SceneGraph.SDL.Example/CMakeLists.txt
+++ b/SceneGraph.SDL.Example/CMakeLists.txt
@@ -1,4 +1,1 @@
-add_executable(scenegraph-sdl-example Example.cpp Example.h)
-
-target_link_libraries(scenegraph-sdl-example LINK_PUBLIC scenegraph scenegraph-sdl)
-target_include_directories(scenegraph-sdl-example PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../Scenegraph ${CMAKE_CURRENT_SOURCE_DIR}/../Scenegraph.SDL)
+add_subdirectory(01.Bootstrap)
